--- a/WebStore_Study/Views/Home/Index.cshtml
+++ b/WebStore_Study/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
         <div class="row">
 
             <div class="col-sm-3">
-                <partial name="Partial/_LeftSideBar" />
+                <partial name="../Shared/Partial/_LeftSideBar" />
             </div>
 
             <div class="col-sm-9 padding-right">
