--- a/WebStore_Study/Views/Home/Index.cshtml
+++ b/WebStore_Study/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
 
                 <partial name="Partial/_CategoryTab" />
 
-                <partial name="Partial/_RecomendedItems" />
+                <partial name="../Shared/Partial/_RecomendedItems" />
 
             </div>
         </div>
