--- a/WebStore_Study/Views/Shared/Partial/_MainMenu.cshtml
+++ b/WebStore_Study/Views/Shared/Partial/_MainMenu.cshtml
@@ -1,22 +1,24 @@
-﻿<ul class="nav navbar-nav collapse navbar-collapse">
-    <li><a href="~/index.html" class="active">Home</a></li>
+﻿
+
+<ul class="nav navbar-nav collapse navbar-collapse">
+    <li><a asp-controller="Home" asp-action="Index" class="active">Home</a></li>
     <li class="dropdown">
         <a href="#">Shop<i class="fa fa-angle-down"></i></a>
         <ul role="menu" class="sub-menu">
-            <li><a href="~/shop.html">Products</a></li>
-            <li><a href="~/product-details.html">Product Details</a></li>
-            <li><a href="~/checkout.html">Checkout</a></li>
-            <li><a href="~/cart.html">Cart</a></li>
-            <li><a href="~/login.html">Login</a></li>
+            <li><a asp-controller="Shop" asp-action="Index">Товары</a></li>
+            <li><a asp-controller="Shop" asp-action="ProductDetails">Информация о товаре</a></li>
+            <li><a asp-controller="Checkout" asp-action="Index" >Оформить заказ</a></li>
+            <li><a asp-controller="Cart" asp-action="Index">Корзина</a></li>
+            <li><a asp-controller="Login" asp-action="Index">Логин</a></li>
         </ul>
     </li>
     <li class="dropdown">
         <a href="#">Blog<i class="fa fa-angle-down"></i></a>
         <ul role="menu" class="sub-menu">
-            <li><a href="~/blog.html">Blog List</a></li>
-            <li><a href="~/blog-single.html">Blog Single</a></li>
+            <li><a asp-controller="Blogs" asp-action="Index">Блоги</a></li>
+            <li><a asp-controller="Blogs" asp-action="BlogSingle">Запись блога</a></li>
         </ul>
     </li>
-    <li><a href="~/404.html">404</a></li>
-    <li><a href="~/contact-us.html">Contact</a></li>
+    <li><a asp-controller="Error404" asp-action="Index">404</a></li>
+    <li><a asp-controller="ContactUs" asp-action="Index">Контакты</a></li>
 </ul>
