Добавлен функционал редактирования сотрудников (добавление, удаление, редактирование)

--- a/WebStore_Study/Views/Shared/Partial/_MainMenu.cshtml
+++ b/WebStore_Study/Views/Shared/Partial/_MainMenu.cshtml
@@ -7,7 +7,7 @@
         <ul role="menu" class="sub-menu">
             <li><a asp-controller="Shop" asp-action="Index">Товары</a></li>
             <li><a asp-controller="Shop" asp-action="ProductDetails">Информация о товаре</a></li>
-            <li><a asp-controller="Checkout" asp-action="Index" >Оформить заказ</a></li>
+            <li><a asp-controller="Checkout" asp-action="Index">Оформить заказ</a></li>
             <li><a asp-controller="Cart" asp-action="Index">Корзина</a></li>
             <li><a asp-controller="Login" asp-action="Index">Логин</a></li>
         </ul>
@@ -21,4 +21,5 @@
     </li>
     <li><a asp-controller="Error404" asp-action="Index">404</a></li>
     <li><a asp-controller="ContactUs" asp-action="Index">Контакты</a></li>
+    <li><a asp-controller="Employee" asp-action="Index">Сотрудники</a></li>
 </ul>
