Добавлен сервис для редактирования сотрудников. Добавлена ViewModel для представления сотрудников. Переработан EmployeeController

--- a/WebStore_Study/Views/_ViewImports.cshtml
+++ b/WebStore_Study/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using WebStore_Study
 @using WebStore_Study.Models
+@using WebStore_Study.ViewModels
 
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
