--- a/WebStore_Study/Views/Employee/AddEmployee.cshtml
+++ b/WebStore_Study/Views/Employee/AddEmployee.cshtml
@@ -1,4 +1,8 @@
-﻿@model Employee
+﻿@model EmployeesViewModel
+
+@{
+    ViewBag.Title = $"Добавление нового сотрудника";
+ }
 
 <div class="container">
 
@@ -6,18 +10,43 @@
         <div class="col-sm-12">
             <h2>Добавить нового сотрудника</h2>
             <form asp-action="EndAddEmployee" method="post">
-                <input type="hidden" name="emp.Id" value=@Model.Id><br>
-                <label>Имя:</label><br>
-                <input type="text" name="emp.FirstName" value=@Model.FirstName><br>
-                <label>Фамилия:</label><br>
-                <input type="text" name="emp.LastName" value=@Model.LastName><br>
-                <label>Отчество:</label><br>
-                <input type="text" name="emp.Patronymic" value=@Model.Patronymic><br>
-                <label>Возраст:</label><br>
-                <input type="text" name="emp.Age" value=@Model.Age><br>
-                <input style="margin:10px 0px" class="btn btn-info" type="submit" value="Сохранить">
-                <input style="margin: 10px 10px" class="btn btn-default" type="reset" value="Сбросить">
-                <a style="margin: 10px 0px" class="btn btn-danger" asp-action="Index" >Отмена</a>
+                
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                
+                <input type="hidden" name="employeesViewModel.Id" value=@Model.Id><br>
+                
+                <div class="form-group">
+                    <label>Имя:</label><br>
+                    <input type="text" name="employeesViewModel.FirstName" value=@Model.FirstName><br>
+                    <span asp-validation-for="FirstName"></span>
+                </div>
+
+                <div class="form-group">
+                    <label>Фамилия:</label><br>
+                    <input type="text" name="employeesViewModel.LastName" value=@Model.LastName><br>
+                    <span asp-validation-for="LastName"></span>
+                </div>
+                
+                <div class="form-group">
+                    <label>Отчество:</label><br>
+                    <input type="text" name="employeesViewModel.Patronymic" value=@Model.Patronymic><br>
+                    <span asp-validation-for="Patronymic"></span>
+                </div>
+                
+                <div class="form-group">
+                    <label>Возраст:</label><br>
+                    <input type="text" name="employeesViewModel.Age" value=@Model.Age><br>
+                    <span asp-validation-for="Age"></span>
+                </div>
+                
+                <div class="form-group">
+                    <input style="margin:10px 0px" class="btn btn-info" type="submit" value="Сохранить">
+                    <input style="margin: 10px 10px" class="btn btn-default" type="reset" value="Сбросить">
+                    <a style="margin: 10px 0px" class="btn btn-danger" asp-action="Index">Отмена</a>
+                </div>
+
+
+
             </form>
 
         </div>
