--- a/WebStore_Study/Views/Employee/EditEmployee.cshtml
+++ b/WebStore_Study/Views/Employee/EditEmployee.cshtml
@@ -1,28 +1,59 @@
-﻿@model Employee
+﻿@model EmployeesViewModel
 
-    <div class="container">
+@{
+    ViewBag.Title = $"Редактирование сотрудника: {Model.LastName} {Model.FirstName}";
+}
 
-        <div class="row">
-            <div class="col-sm-12">
-                <h2>Редактировать карточку @Model.LastName @Model.FirstName</h2>
-                <form asp-action="EndEditEmployee" method="post">
-                    <input type="hidden" name="Id" value=@Model.Id><br>
+<div class="container">
+
+    <div class="row">
+        <div class="col-sm-12">
+            <h2>@ViewBag.Title</h2>
+            <form asp-action="EndEditEmployee" method="post">
+                
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+                <input type="hidden" name="employeesViewModel.Id" value=@Model.Id><br>
+                
+                <div class="form-group">
                     <label>Имя:</label><br>
-                    <input type="text" name="FirstName" value=@Model.FirstName><br>
+                    <input type="text" name="employeesViewModel.FirstName" value=@Model.FirstName><br>
+                    <span asp-validation-for="FirstName" class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
                     <label>Фамилия:</label><br>
-                    <input type="text" name="LastName" value=@Model.LastName><br>
+                    <input type="text" name="employeesViewModel.LastName" value=@Model.LastName><br>
+                    <span asp-validation-for="LastName" class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
                     <label>Отчество:</label><br>
-                    <input type="text" name="Patronymic" value=@Model.Patronymic><br>
+                    <input type="text" name="employeesViewModel.Patronymic" value=@Model.Patronymic><br>
+                    <span asp-validation-for="Patronymic" class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
                     <label>Возраст:</label><br>
-                    <input type="text" name="Age" value=@Model.Age><br>
+                    <input type="text" name="employeesViewModel.Age" value=@Model.Age><br>
+                    <span asp-validation-for="Age" class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
                     <input style="margin:10px 0px" class="btn btn-info" type="submit" value="Сохранить">
                     <input style="margin: 10px 10px" class="btn btn-default" type="reset" value="Сбросить">
                     <a style="margin: 10px 0px" class="btn btn-danger" asp-action="DeleteEmployee" asp-route-id="@Model.Id">Удалить</a>
-                </form>
-               
-            </div>
+                </div>
 
+
+
+
+
+
+            </form>
         </div>
 
-
     </div>
+
+
+</div>
