--- a/WebStore_Study/Views/Employee/Index.cshtml
+++ b/WebStore_Study/Views/Employee/Index.cshtml
@@ -1,5 +1,8 @@
 ﻿@model IEnumerable<Employee>
 
+@{
+    ViewBag.Title = $"Сотрудники компании";
+}
 
 <div class="container">
     <div class="row">
