--- a/WebStore_Study/Views/Employee/EditEmployee.cshtml
+++ b/WebStore_Study/Views/Employee/EditEmployee.cshtml
@@ -7,36 +7,32 @@
 <div class="container">
 
     <div class="row">
-        <div class="col-sm-12">
+        <div class="col-sm-6">
             <h2>@ViewBag.Title</h2>
             <form asp-action="EndEditEmployee" method="post">
                 
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div asp-validation-summary="ModelOnly"></div>
 
-                <input type="hidden" name="employeesViewModel.Id" value=@Model.Id><br>
+                <input type="hidden" asp-for="Id" value=@Model.Id><br>
                 
                 <div class="form-group">
                     <label>Имя:</label><br>
-                    <input type="text" name="employeesViewModel.FirstName" value=@Model.FirstName><br>
-                    <span asp-validation-for="FirstName" class="text-danger"></span>
+                    <input type="text" asp-for="FirstName" value=@Model.FirstName class="form-control"><span asp-validation-for="FirstName" class="text-danger"></span>
                 </div>
 
                 <div class="form-group">
                     <label>Фамилия:</label><br>
-                    <input type="text" name="employeesViewModel.LastName" value=@Model.LastName><br>
-                    <span asp-validation-for="LastName" class="text-danger"></span>
+                    <input type="text" asp-for="LastName" value=@Model.LastName class="form-control"><span asp-validation-for="LastName" class="text-danger"></span>
                 </div>
 
                 <div class="form-group">
                     <label>Отчество:</label><br>
-                    <input type="text" name="employeesViewModel.Patronymic" value=@Model.Patronymic><br>
-                    <span asp-validation-for="Patronymic" class="text-danger"></span>
+                    <input type="text" asp-for="Patronymic" value=@Model.Patronymic class="form-control"><span asp-validation-for="Patronymic" class="text-danger"></span>
                 </div>
 
                 <div class="form-group">
                     <label>Возраст:</label><br>
-                    <input type="text" name="employeesViewModel.Age" value=@Model.Age><br>
-                    <span asp-validation-for="Age" class="text-danger"></span>
+                    <input type="number" asp-for="Age" value=@Model.Age class="form-control"><span asp-validation-for="Age" class="text-danger"></span>
                 </div>
 
                 <div class="form-group">
