--- a/WebStore_Study/Views/Shared/Partial/_Scripts.cshtml
+++ b/WebStore_Study/Views/Shared/Partial/_Scripts.cshtml
@@ -4,3 +4,8 @@
 <script src="~/js/price-range.js"></script>
 <script src="~/js/jquery.prettyPhoto.js"></script>
 <script src="~/js/main.js"></script>
+<script src="~/lib/jquery-validate/jquery.validate.js"></script>
+<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+
+
+
