Работа каталога товаров и бокового меню

--- a/WebStore_Study/Views/Shared/Partial/_LeftSideBar.cshtml
+++ b/WebStore_Study/Views/Shared/Partial/_LeftSideBar.cshtml
@@ -16,7 +16,7 @@
         </div>
     </div><!--/price-range-->
 
-    <div class="shipping text-center">
+    <div class="shipping text-center"  style="margin-bottom:40px">
         <!--shipping-->
         <img src="~/images/home/shipping.jpg" alt="" />
     </div><!--/shipping-->
