--- a/WebStore_Study/Views/Home/Index.cshtml
+++ b/WebStore_Study/Views/Home/Index.cshtml
@@ -1,5 +1,18 @@
-﻿@{
-    Layout = "_Layout";
+﻿@using WebStore_Study.Infrastructure.Interfaces
+@inject IProductData productData
+@{
+    var products = productData
+        .GetProducts()
+        .OrderBy(p => p.Order)
+        .Take(6)
+        .Select(p => new ProductViewModel
+        {
+            Id = p.Id,
+            Name = p.Name,
+            ImageUrl = p.ImageUrl,
+            Order = p.Order,
+            Price = p.Price,
+        });
 }
 
 <partial name="Partial/_Slider" />
@@ -13,11 +26,11 @@
 
             <div class="col-sm-9 padding-right">
 
-                <partial name="Partial/_FeaturesItems" />
+                <partial name="../Shared/Partial/_FeaturesItems" model="products" />
 
                 <partial name="Partial/_CategoryTab" />
 
-                <partial name="../Shared/Partial/_RecomendedItems" />
+                <partial name="../Shared/Partial/_RecomendedItems"  />
 
             </div>
         </div>
