--- a/WebStore_Study/Views/Shared/Components/Brands/Default.cshtml
+++ b/WebStore_Study/Views/Shared/Components/Brands/Default.cshtml
@@ -5,7 +5,7 @@
             <ul class="nav nav-pills nav-stacked">
                 @foreach (var brand in Model)
                 {
-                    <li><a href="#"> <span class="pull-right">(50)</span>@brand.Name</a></li>
+                    <li><a asp-controller="Catalog" asp-action="Shop" asp-route-brandId="@brand.Id"> <span class="pull-right">(50)</span>@brand.Name</a></li>
                 }
 
             </ul>
