--- a/WebStore_Study/Views/Shared/Components/Sections/Default.cshtml
+++ b/WebStore_Study/Views/Shared/Components/Sections/Default.cshtml
@@ -21,7 +21,7 @@
                         <ul>
                             @foreach (var childSection in parentSection.ChildSection)
                             {
-                                <li><a href="#">@childSection.Name </a></li>
+                                <li><a asp-controller="Catalog" asp-action="Shop" asp-route-sectionId="@childSection.Id">@childSection.Name </a></li>
                             }
                           
                         </ul>
@@ -34,7 +34,7 @@
         {
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h4 class="panel-title"><a href="#">@parentSection.Name</a></h4>
+                    <h4 class="panel-title"><a asp-controller="Catalog" asp-action="Shop" asp-route-sectionId="@parentSection.Id">@parentSection.Name</a></h4>
                 </div>
             </div>
 
