--- a/WebStore_Study/Views/Shared/Partial/_MainMenu.cshtml
+++ b/WebStore_Study/Views/Shared/Partial/_MainMenu.cshtml
@@ -6,7 +6,7 @@
         <a href="#">Shop<i class="fa fa-angle-down"></i></a>
         <ul role="menu" class="sub-menu">
             <li><a asp-controller="Catalog" asp-action="Shop">Товары</a></li>
-            <li><a asp-controller="Shop" asp-action="ProductDetails">Информация о товаре</a></li>
+            <li><a asp-controller="Catalog" asp-action="Shop">Информация о товаре</a></li>
             <li><a asp-controller="Checkout" asp-action="Index">Оформить заказ</a></li>
             <li><a asp-controller="Cart" asp-action="Index">Корзина</a></li>
             <li><a asp-controller="Login" asp-action="Index">Логин</a></li>
