-Добавлена сущность сотрудника, -Создана миграция, обновлена БД, -Создан сервис для работы с данными сотрудников из БД

--- a/WebStore_Study/Views/Employee/EmployeeDetail.cshtml
+++ b/WebStore_Study/Views/Employee/EmployeeDetail.cshtml
@@ -1,4 +1,4 @@
-﻿@model Employee
+﻿@model EmployeesViewModel
 
 @{
     ViewBag.Title = $"Информация о сотруднике {Model.LastName} {Model.FirstName}";
