--- a/WebStore_Study/Views/Login/Index.cshtml
+++ b/WebStore_Study/Views/Login/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model LoginViewModel
 
 <section id="form">
     <!--form-->
@@ -9,8 +9,8 @@
                     <!--login form-->
                     <h2>Login to your account</h2>
                     <form action="#">
-                        <input type="text" placeholder="Name" />
                         <input type="email" placeholder="Email Address" />
+                        <input type="password" placeholder="Password" />
                         <span>
                             <input type="checkbox" class="checkbox">
                             Keep me signed in
@@ -27,9 +27,12 @@
                     <!--sign up form-->
                     <h2>New User Signup!</h2>
                     <form action="#">
-                        <input type="text" placeholder="Name" />
+                        <input type="text" placeholder="First Name" />
+                        <input type="text" placeholder="Last Name" />
+                        <input type="number" placeholder="Age" />
                         <input type="email" placeholder="Email Address" />
                         <input type="password" placeholder="Password" />
+                        <input type="password" placeholder="Confirm Password" />
                         <button type="submit" class="btn btn-default">Signup</button>
                     </form>
                 </div><!--/sign up form-->
