- Employee переделан в User - В проект добавлены сервисы регистрации и авторизации - Перереботана структура БД, - Создана миграция

--- a/WebStore_Study/Views/Shared/_Layout.cshtml
+++ b/WebStore_Study/Views/Shared/_Layout.cshtml
@@ -1,4 +1,8 @@
-﻿<!DOCTYPE html>
+﻿
+
+@inject SignInManager<User> signInManager;
+
+<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="utf-8">
