--- a/WebStore_Study/Views/User/DeleteEmployee.cshtml
+++ b/WebStore_Study/Views/User/DeleteEmployee.cshtml
@@ -1,4 +1,4 @@
-﻿@model EmployeesViewModel
+﻿@model UsersViewModel
 @{
     ViewData["Title"] = $"Подтвердите удаление данных сотрудника {Model.LastName} {Model.FirstName}";
 }
