--- a/WebStore_Study/Views/User/EditEmployee.cshtml
+++ b/WebStore_Study/Views/User/EditEmployee.cshtml
@@ -1,4 +1,4 @@
-﻿@model EmployeesViewModel
+﻿@model UsersViewModel
 
 @{
     ViewBag.Title = $"Редактирование сотрудника: {Model.LastName} {Model.FirstName}";
