--- a/WebStore_Study/Views/User/EmployeeDetail.cshtml
+++ b/WebStore_Study/Views/User/EmployeeDetail.cshtml
@@ -1,4 +1,4 @@
-﻿@model EmployeesViewModel
+﻿@model UsersViewModel
 
 @{
     ViewBag.Title = $"Информация о сотруднике {Model.LastName} {Model.FirstName}";
