--- a/WebStore_Study/Views/Login/Index.cshtml
+++ b/WebStore_Study/Views/Login/Index.cshtml
@@ -8,14 +8,18 @@
                 <div class="login-form">
                     <!--login form-->
                     <h2>Login to your account</h2>
-                    <form action="#">
-                        <input type="email" placeholder="Email Address" />
-                        <input type="password" placeholder="Password" />
+                    <form asp-action="Login">
+                        <div asp-validation-summary="All"></div>
+                        <input type="email" asp-for="Email" placeholder="Email Address" />
+                        <span asp-validation-for="Email" />
+                        <input type="password" asp-for="Password" placeholder="Password" />
+                        <span asp-validation-for="Password" />
                         <span>
                             <input type="checkbox" class="checkbox">
                             Keep me signed in
                         </span>
                         <button type="submit" class="btn btn-default">Login</button>
+
                     </form>
                 </div><!--/login form-->
             </div>
@@ -26,14 +30,22 @@
                 <div class="signup-form">
                     <!--sign up form-->
                     <h2>New User Signup!</h2>
-                    <form action="#">
-                        <input type="text" placeholder="First Name" />
-                        <input type="text" placeholder="Last Name" />
-                        <input type="number" placeholder="Age" />
-                        <input type="email" placeholder="Email Address" />
-                        <input type="password" placeholder="Password" />
-                        <input type="password" placeholder="Confirm Password" />
+                    <form asp-action="Register">
+                        <div asp-validation-summary="All"></div>
+                        <input type="text" asp-for="FirstName" placeholder="First Name" />
+                        <span asp-validation-for="FirstName" />
+                        <input type="text" asp-for="LastName" placeholder="Last Name" />
+                        <span asp-validation-for="LastName" />
+                        <input type="number" asp-for="Age" placeholder="Age" />
+                        <span asp-validation-for="Age" />
+                        <input type="email" asp-for="Email" placeholder="Email Address" />
+                        <span asp-validation-for="Email" />
+                        <input type="password" asp-for="Password" placeholder="Password" />
+                        <span asp-validation-for="Password" />
+                        <input type="password" asp-for="ConfirmPassword" placeholder="Confirm Password" />
+                        <span asp-validation-for="ConfirmPassword" />
                         <button type="submit" class="btn btn-default">Signup</button>
+
                     </form>
                 </div><!--/sign up form-->
             </div>
