--- a/WebStore_Study/Views/Login/Register.cshtml
+++ b/WebStore_Study/Views/Login/Register.cshtml
@@ -1,4 +1,5 @@
 ﻿@model LoginViewModel
+
 @{ViewBag.Title = "Авторизация";
 }
 <section id="form">
@@ -41,8 +42,8 @@
                     <!--sign up form-->
                     <h2>New User Signup!</h2>
                     <form asp-action="Register" method="post">
-                        <div style="margin:0" asp-validation-summary="All" class="text-danger">
-                            
+                        <div asp-validation-summary="All" class="text-danger">
+
                         </div>
                         <div class="form-group">
                             <input type="text" asp-for="FirstName" class="form-control" placeholder="First Name" />
