--- a/WebStore_Study/Views/Shared/Partial/_Header.cshtml
+++ b/WebStore_Study/Views/Shared/Partial/_Header.cshtml
@@ -66,7 +66,8 @@
                             <li><a href="#"><i class="fa fa-star"></i> Wishlist</a></li>
                             <li><a href="~/checkout.html"><i class="fa fa-crosshairs"></i> Checkout</a></li>
                             <li><a href="~/cart.html"><i class="fa fa-shopping-cart"></i> Cart</a></li>
-                            <li><a asp-controller="Login" asp-action="Index"><i class="fa fa-lock"></i>Login</a></li>
+                            <li><a asp-controller="Account" asp-action="Login"><i class="fa fa-lock"></i>Login</a></li>
+                            <li><a asp-controller="Account" asp-action="Register"><i class="fa fa-user"></i>Register</a></li>
                         </ul>
                     </div>
                 </div>
