--- a/WebStore_Study/Views/Account/Login.cshtml
+++ b/WebStore_Study/Views/Account/Login.cshtml
@@ -21,8 +21,8 @@
                         </div>
                         <div class="form-group">
                             <span>
-                                <input type="checkbox" class="checkbox">
-                                Keep me signed in
+                                <input asp-for="RememberMe" type="checkbox" class="checkbox">
+                                <label asp-for="RememberMe"></label>
                             </span>
                         </div>
                         <div class="form-group">
