--- a/WebStore_Study/Views/Account/Login.cshtml
+++ b/WebStore_Study/Views/Account/Login.cshtml
@@ -1,4 +1,5 @@
 ﻿@model LoginViewModel
+
 @{ViewBag.Title = "Авторизация";
 }
 <section style="margin:40px 0 60px 0">
@@ -9,21 +10,28 @@
                 <div class="login-form">
                     <!--login form-->
                     <h2>Login to your account</h2>
-                    <form asp-action="Login" method="post">
+                    <form asp-action="Login" asp-antiforgery="true">
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                        
                         <div class="form-group">
                             <input type="email" asp-for="Email" class="form-control" placeholder="Email Address" />
                             <span asp-validation-for="Email" class="text-danger" />
                         </div>
+                        
                         <div class="form-group">
                             <input type="password" asp-for="Password" class="form-control" placeholder="Password" />
                             <span asp-validation-for="Password" class="text-danger" />
                         </div>
+                        
                         <div class="form-group">
                             <span>
                                 <input asp-for="RememberMe" type="checkbox" class="checkbox">
                                 <label asp-for="RememberMe"></label>
                             </span>
+                        </div>
+                        
+                        <div class="form-group">
+                            <input type="hidden" asp-for="ReturnUrl" />
                         </div>
                         
                         <div class="form-group">
