--- a/WebStore_Study/Views/Shared/Partial/_MainMenu.cshtml
+++ b/WebStore_Study/Views/Shared/Partial/_MainMenu.cshtml
@@ -9,7 +9,7 @@
             <li><a asp-controller="Catalog" asp-action="Shop">Информация о товаре</a></li>
             <li><a asp-controller="Checkout" asp-action="Index">Оформить заказ</a></li>
             <li><a asp-controller="Cart" asp-action="Index">Корзина</a></li>
-            <li><a asp-controller="Login" asp-action="Index">Логин</a></li>
+            <li><a asp-controller="Account" asp-action="Login">Логин</a></li>
         </ul>
     </li>
     <li class="dropdown">
@@ -21,5 +21,5 @@
     </li>
     <li><a asp-controller="Error404" asp-action="Index">404</a></li>
     <li><a asp-controller="ContactUs" asp-action="Index">Контакты</a></li>
-    <li><a asp-controller="Employee" asp-action="Index">Сотрудники</a></li>
+    <li><a asp-controller="User" asp-action="Index">Сотрудники</a></li>
 </ul>
