--- a/WebStore_Study/Views/User/AddEmployee.cshtml
+++ b/WebStore_Study/Views/User/AddEmployee.cshtml
@@ -26,9 +26,9 @@
                 </div>
                 
                 <div class="form-group">
-                    <label asp-for="Patronymic">Отчество:</label><br>
-                    <input type="text" asp-for="Patronymic"   class="form-control">
-                    <span asp-validation-for="Patronymic" class="text-danger"></span>
+                    <label asp-for="Email">Отчество:</label><br>
+                    <input type="text" asp-for="Email"   class="form-control">
+                    <span asp-validation-for="Email" class="text-danger"></span>
                 </div>
                 
                 <div class="form-group">
