--- a/WebStore_Study/Views/User/EditEmployee.cshtml
+++ b/WebStore_Study/Views/User/EditEmployee.cshtml
@@ -27,7 +27,7 @@
 
                 <div class="form-group">
                     <label>Отчество:</label><br>
-                    <input type="text" asp-for="Patronymic" value=@Model.Patronymic class="form-control"><span asp-validation-for="Patronymic" class="text-danger"></span>
+                    <input type="text" asp-for="Email" value=@Model.Email class="form-control"><span asp-validation-for="Email" class="text-danger"></span>
                 </div>
 
                 <div class="form-group">
