--- a/WebStore_Study/Views/User/EmployeeDetail.cshtml
+++ b/WebStore_Study/Views/User/EmployeeDetail.cshtml
@@ -18,7 +18,7 @@
         <dd>@Model.LastName</dd>
 
         <dt>Отчество</dt>
-        <dd>@Model.Patronymic</dd>
+        <dd>@Model.Email</dd>
 
         <dt>Возраст</dt>
         <dd>@Model.Age</dd>
