--- a/WebStore_Study/Views/User/Index.cshtml
+++ b/WebStore_Study/Views/User/Index.cshtml
@@ -13,7 +13,7 @@
                         <th>id</th>
                         <th>Имя</th>
                         <th>Фамилия</th>
-                        <th>Отчество</th>
+                        <th>Email</th>
                         <th>Возраст</th>
                         <th>Детали</th>
                         <th></th>
@@ -29,7 +29,7 @@
                             <td>@employee.Id</td>
                             <td>@employee.FirstName</td>
                             <td>@employee.LastName</td>
-                            <td>@employee.Patronymic</td>
+                            <td>@employee.Email</td>
                             <td>@employee.Age</td>
                             <td>
                                 <a asp-action="EmployeeDetail" asp-route-id="@employee.Id">
