Добавлены методы поиска товара по ID

--- a/WebStore_Study/Views/Catalog/Details.cshtml
+++ b/WebStore_Study/Views/Catalog/Details.cshtml
@@ -1,4 +1,7 @@
-﻿
+﻿@model ProductViewModel
+@{
+    ViewBag.Title = Model.Name;
+}
 <section>
     <div class="container">
         <div class="row">
