Страница деталей товара

--- a/WebStore_Study/Views/Home/Index.cshtml
+++ b/WebStore_Study/Views/Home/Index.cshtml
@@ -28,7 +28,7 @@
 
                 <partial name="../Shared/Partial/_FeaturesItems" model="products" />
 
-                <partial name="Partial/_CategoryTab" />
+                <partial name="../Shared/Partial/_CategoryTab" />
 
                 <partial name="../Shared/Partial/_RecomendedItems"  />
 
