--- a/WebStore_Study/Views/Error404/Index.cshtml
+++ b/WebStore_Study/Views/Error404/Index.cshtml
@@ -37,6 +37,6 @@
     </div>
 
 
-    <partial name="../Shared/Partial/_Scripts">
+    <partial name="../Shared/Partial/_Scripts"></partial>
 </body>
 </html>
