--- a/WebStore_Study/Views/Shared/Partial/_Styles.cshtml
+++ b/WebStore_Study/Views/Shared/Partial/_Styles.cshtml
@@ -9,9 +9,10 @@
 
 <environment include="Development">
     @*<link href="~/css/site.css" rel="stylesheet" asp-append-version="true"></link>*@
-    <link href="~/css/price-range.css" rel="stylesheet">
-    <link href="~/css/animate.css" rel="stylesheet">
     <link href="~/css/main.css" rel="stylesheet" asp-append-version="true">
+    <link href="~/css/price-range.css" rel="stylesheet" asp-append-version="true">
+    <link href="~/css/animate.css" rel="stylesheet">
+    
     <link href="~/css/responsive.css" rel="stylesheet">
 </environment>
 
