--- a/WebStore_Study/wwwroot/css/main.css
+++ b/WebStore_Study/wwwroot/css/main.css
@@ -2141,7 +2141,7 @@ h2.title {
 
 .rating-area {
   border: 1px solid #F7F7F0;
-  direction: block;
+/*  direction: block;*/
   overflow: hidden;
 }
 
