--- a/WebStore_Study/Views/Account/Login.cshtml
+++ b/WebStore_Study/Views/Account/Login.cshtml
@@ -14,7 +14,7 @@
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                         
                         <div class="form-group">
-                            <input type="email" asp-for="Email" class="form-control" placeholder="Email Address" />
+                            <input  asp-for="Email" class="form-control" placeholder="Email Address" />
                             <span asp-validation-for="Email" class="text-danger" />
                         </div>
                         
