Реализован функционал работы с корзиной

--- a/WebStore_Study/Views/Cart/Index.cshtml
+++ b/WebStore_Study/Views/Cart/Index.cshtml
@@ -1,9 +1,13 @@
-﻿<section id="cart_items">
+﻿@model CartViewModel
+@{
+    ViewBag.Title = "Корзина";
+}
+<section id="cart_items">
     <div class="container">
         <div class="breadcrumbs">
             <ol class="breadcrumb">
                 <li><a href="#">Home</a></li>
-                <li class="active">Shopping Cart</li>
+                <li class="active">Корзина</li>
             </ol>
         </div>
         <div class="table-responsive cart_info">
@@ -19,82 +23,36 @@
                     </tr>
                 </thead>
                 <tbody>
+                @foreach (var (product, quantity) in Model.Items)
+                {
                     <tr>
                         <td class="cart_product">
-                            <a href=""><img src="images/cart/one.png" alt=""></a>
+                            <a href=""><img src="images/cart/@product.ImageUrl" alt=""></a>
                         </td>
                         <td class="cart_description">
-                            <h4><a href="">Colorblock Scuba</a></h4>
-                            <p>Web ID: 1089772</p>
+                            <h4><a href="">@product.Name</a></h4>
+                            <p>Web ID: @product.Id.ToString("000000")</p>
                         </td>
                         <td class="cart_price">
-                            <p>$59</p>
+                            <p>@product.Price.ToString("C")</p>
                         </td>
                         <td class="cart_quantity">
                             <div class="cart_quantity_button">
-                                <a class="cart_quantity_up" href=""> + </a>
-                                <input class="cart_quantity_input" type="text" name="quantity" value="1" autocomplete="off" size="2">
-                                <a class="cart_quantity_down" href=""> - </a>
-                            </div>
+                                <a asp-controller="Cart" asp-action="AddToCart" asp-route-id="@product.Id" class="cart_quantity_up" > + </a>
+                                <input class="cart_quantity_input" type="text" name="quantity" value="@quantity" autocomplete="off" size="2">
+                                <a asp-controller="Cart" asp-action="DecrementFromCart" asp-route-id="@product.Id" class="cart_quantity_down" > - </a>
+                            </div> 
                         </td>
                         <td class="cart_total">
-                            <p class="cart_total_price">$59</p>
+                            <p class="cart_total_price">@((product.Price*quantity).ToString("C"))</p>
                         </td>
                         <td class="cart_delete">
-                            <a class="cart_quantity_delete" href=""><i class="fa fa-times"></i></a>
+                            <a asp-controller="Cart" asp-action="RemoveFromCart" asp-route-id="@product.Id" class="cart_quantity_delete" ><i class="fa fa-times"></i></a>
                         </td>
                     </tr>
+                }
+                
 
-                    <tr>
-                        <td class="cart_product">
-                            <a href=""><img src="images/cart/two.png" alt=""></a>
-                        </td>
-                        <td class="cart_description">
-                            <h4><a href="">Colorblock Scuba</a></h4>
-                            <p>Web ID: 1089772</p>
-                        </td>
-                        <td class="cart_price">
-                            <p>$59</p>
-                        </td>
-                        <td class="cart_quantity">
-                            <div class="cart_quantity_button">
-                                <a class="cart_quantity_up" href=""> + </a>
-                                <input class="cart_quantity_input" type="text" name="quantity" value="1" autocomplete="off" size="2">
-                                <a class="cart_quantity_down" href=""> - </a>
-                            </div>
-                        </td>
-                        <td class="cart_total">
-                            <p class="cart_total_price">$59</p>
-                        </td>
-                        <td class="cart_delete">
-                            <a class="cart_quantity_delete" href=""><i class="fa fa-times"></i></a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="cart_product">
-                            <a href=""><img src="images/cart/three.png" alt=""></a>
-                        </td>
-                        <td class="cart_description">
-                            <h4><a href="">Colorblock Scuba</a></h4>
-                            <p>Web ID: 1089772</p>
-                        </td>
-                        <td class="cart_price">
-                            <p>$59</p>
-                        </td>
-                        <td class="cart_quantity">
-                            <div class="cart_quantity_button">
-                                <a class="cart_quantity_up" href=""> + </a>
-                                <input class="cart_quantity_input" type="text" name="quantity" value="1" autocomplete="off" size="2">
-                                <a class="cart_quantity_down" href=""> - </a>
-                            </div>
-                        </td>
-                        <td class="cart_total">
-                            <p class="cart_total_price">$59</p>
-                        </td>
-                        <td class="cart_delete">
-                            <a class="cart_quantity_delete" href=""><i class="fa fa-times"></i></a>
-                        </td>
-                    </tr>
                 </tbody>
             </table>
         </div>
@@ -165,10 +123,10 @@
             <div class="col-sm-6">
                 <div class="total_area">
                     <ul>
-                        <li>Cart Sub Total <span>$59</span></li>
+                        @*<li>Cart Sub Total <span>$59</span></li>
                         <li>Eco Tax <span>$2</span></li>
-                        <li>Shipping Cost <span>Free</span></li>
-                        <li>Total <span>$61</span></li>
+                        <li>Shipping Cost <span>Free</span></li>*@
+                        <li>Total <span>@Model.TotalPrice.ToString("C")</span></li>
                     </ul>
                     <a class="btn btn-default update" href="">Update</a>
                     <a class="btn btn-default check_out" href="">Check Out</a>
