--- a/WebStore_Study/Views/Catalog/Details.cshtml
+++ b/WebStore_Study/Views/Catalog/Details.cshtml
@@ -61,7 +61,7 @@
                                 <span>US @Model.Price.ToString("C")</span>
                                 <label>Кол-во:</label>
                                 <input type="text" value="3" />
-                                <a class="btn btn-default cart">
+                                <a asp-controller="Cart" asp-action="AddToCart" asp-route-id="@Model.Id" class="btn btn-default cart">
                                     <i class="fa fa-shopping-cart"></i>
                                     В корзину
                                 </a>
