--- a/WebStore_Study/Views/Shared/Components/UserMenu/UserInfo.cshtml
+++ b/WebStore_Study/Views/Shared/Components/UserMenu/UserInfo.cshtml
@@ -9,7 +9,7 @@
         <li><a asp-controller="User" asp-action="EmployeeDetail" asp-route-id="@User.FindFirstValue(ClaimTypes.NameIdentifier)"><i class="fa fa-lock"></i>@User.Identity!.Name</a></li>
         <li><a href="#"><i class="fa fa-star"></i> Список желаний</a></li>
         <li><a href="~/checkout.html"><i class="fa fa-crosshairs"></i> Заказы</a></li>
-        <li><a href="~/cart.html"><i class="fa fa-shopping-cart"></i> Корзина</a></li>
+        <li><a asp-controller="Cart" asp-action="Index"><i class="fa fa-shopping-cart"></i> Корзина</a></li>
         <li><a asp-controller="Account" asp-action="Logout"><i class="fa fa-"></i>Выход</a></li>
     </ul>
 </div>
