--- a/WebStore_Study/Views/Shared/Partial/_ProductCard.cshtml
+++ b/WebStore_Study/Views/Shared/Partial/_ProductCard.cshtml
@@ -8,7 +8,7 @@
                 <img src="~/images/shop/@Model.ImageUrl" alt="" />
                 <h2>@Model.Price.ToString("C")</h2>
                 <p>@Model.Name</p>
-                <a href="#" class="btn btn-default add-to-cart">
+                <a asp-controller="Cart" asp-action="AddToCart" asp-route-id="@Model.Id" class="btn btn-default add-to-cart">
                     <i class="fa fa-shopping-cart"></i>Добавить в корзину
                 </a>
             </div>
@@ -16,7 +16,7 @@
                 <div class="overlay-content">
                     <h2>@Model.Price.ToString("C")</h2>
                     <p><a asp-controller="Catalog" asp-action="Details" asp-route-id="@Model.Id">@Model.Name</a></p>
-                    <a href="#" class="btn btn-default add-to-cart">
+                    <a asp-controller="Cart" asp-action="AddToCart" asp-route-id="@Model.Id" class="btn btn-default add-to-cart">
                         <i class="fa fa-shopping-cart"></i>Добавить в корзину
                     </a>
                 </div>
