--- a/WebStore_Study/Views/Catalog/Details.cshtml
+++ b/WebStore_Study/Views/Catalog/Details.cshtml
@@ -54,7 +54,7 @@
                         <div class="product-information">
                             <!--/product-information-->
                             <img src="~/images/product-details/new.jpg" class="newarrival" alt="" />
-                            <h2>Anne Klein Sleeveless Colorblock Scuba</h2>
+                            <h2>@Model.Name</h2>
                             <p>Web ID: @Model.Id.ToString("000000")</p>
                             <img src="~/images/product-details/rating.png" alt="" />
                             <span>
