--- a/WebStore_Study/Areas/Admin/Views/Shared/Partial/_SideBar.cshtml
+++ b/WebStore_Study/Areas/Admin/Views/Shared/Partial/_SideBar.cshtml
@@ -1,4 +1,19 @@
-﻿
-@*
-    For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿<div class="sidebar-collapse">
+    <ul class="nav" id="main-menu">
+                 
+
+
+        <li class="active-link">
+            <a asp-controller="Home" asp-action="Index" asp-area="Admin" ><i class="fa fa-desktop "></i>Панель администратора @*<span class="badge">Included</span>*@</a>
+        </li>
+                   
+
+        <li>
+            <a asp-controller="Catalog" asp-action="Index" asp-area="Admin"><i class="fa fa-table "></i>Каталог  <span class="badge">Included</span></a>
+        </li>
+        <li>
+            <a asp-controller="User" asp-action="Index" asp-area="Admin"><i class="fa fa-edit "></i>Пользователи  <span class="badge">Included</span></a>
+        </li>
+                    
+    </ul>
+</div>
