--- a/WebStore_Study/Views/Shared/Components/UserMenu/UserInfo.cshtml
+++ b/WebStore_Study/Views/Shared/Components/UserMenu/UserInfo.cshtml
@@ -4,7 +4,7 @@
     <ul class="nav navbar-nav">
         @if (User.IsInRole(Role.Administrator))
         {
-            <li><a href="#"><i class="fa fa-keyboard-o"></i> Админка</a></li>
+            <li><a  asp-controller="Home" asp-action="Index" asp-area="Admin"><i class="fa fa-keyboard-o"></i> Админка</a></li>
         }
         <li><a asp-controller="User" asp-action="EmployeeDetail" asp-route-id="@User.FindFirstValue(ClaimTypes.NameIdentifier)"><i class="fa fa-lock"></i>@User.Identity!.Name</a></li>
         <li><a href="#"><i class="fa fa-star"></i> Список желаний</a></li>
