ViewComponent Корзины для отображения кол-ва товаров в корзине и общей суммы

--- a/WebStore_Study/Views/Shared/Components/UserMenu/UserInfo.cshtml
+++ b/WebStore_Study/Views/Shared/Components/UserMenu/UserInfo.cshtml
@@ -9,7 +9,8 @@
         <li><a asp-controller="UserProfile" asp-action="Index" asp-route-id="@User.FindFirstValue(ClaimTypes.NameIdentifier)"><i class="fa fa-lock"></i>@User.Identity!.Name</a></li>
         <li><a href="#"><i class="fa fa-star"></i> Список желаний</a></li>
         @*<li><a href="~/checkout.html"><i class="fa fa-crosshairs"></i> Заказы</a></li>*@
-        <li><a asp-controller="Cart" asp-action="Index"><i class="fa fa-shopping-cart"></i> Корзина</a></li>
+        @*<li><a asp-controller="Cart" asp-action="Index"><i class="fa fa-shopping-cart"></i> Корзина</a></li>*@
+        <vc:cart/>
         <li><a asp-controller="Account" asp-action="Logout"><i class="fa fa-"></i>Выход</a></li>
     </ul>
 </div>
