--- a/WebStore_Study/Areas/Admin/Views/Catalog/Index.cshtml
+++ b/WebStore_Study/Areas/Admin/Views/Catalog/Index.cshtml
@@ -4,6 +4,13 @@
 }
 
 <table class="table">
+    <div class="row">
+        <div class="col-sm-12">
+           
+                <a style="margin: 10px 0px" class="btn btn-info" asp-action="Create">Добавить новый товар</a>
+            
+        </div>
+    </div>
 
     <thead>
     <tr>
