--- a/WebStore_Study/Areas/Admin/Views/Catalog/Delete.cshtml
+++ b/WebStore_Study/Areas/Admin/Views/Catalog/Delete.cshtml
@@ -11,7 +11,7 @@
     <h4>@Html.DisplayFor(model => model.Name)</h4>
     <hr />
     <dl class="row">
-        <dd><img src="~/images/shop/@Model.ImageUrl"/></dd>
+        <dd><img src="~/images/shop/@Model.ImageUrl" width="200"/></dd>
         
 
         <dt class = "col-sm-2">
