--- a/WebStore_Study/Areas/Admin/Views/_ViewImports.cshtml
+++ b/WebStore_Study/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using WebStore_Study
 @using WebStore_Study.ViewModels
+@using WebStore_Study.Areas.Admin.ViewModels
 @using Microsoft.AspNetCore.Identity
 @using WebStore_Study.Domain.Entities
 
