--- a/Ui/WebStore_Study/Views/Home/Index.cshtml
+++ b/Ui/WebStore_Study/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@using WebStore_Study.Infrastructure.Interfaces
+﻿@using WebStore_Study.Interfaces.Services
 @inject IProductData productData
 @{
     var products = productData
