--- a/Ui/WebStore_Study/Views/_ViewImports.cshtml
+++ b/Ui/WebStore_Study/Views/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 ﻿@using WebStore_Study
-@using WebStore_Study.ViewModels
+@using WebStore_Study.Domain.ViewModels
 @using Microsoft.AspNetCore.Identity
 @using WebStore_Study.Domain.Entities
 
