--- a/Ui/WebStore_Study/Views/Shared/Partial/_MainMenu.cshtml
+++ b/Ui/WebStore_Study/Views/Shared/Partial/_MainMenu.cshtml
@@ -22,4 +22,5 @@
     <li><a asp-controller="Error404" asp-action="Index">404</a></li>
     <li><a asp-controller="ContactUs" asp-action="Index">Контакты</a></li>
     <li><a asp-controller="User" asp-action="Index">Сотрудники</a></li>
+    <li><a asp-controller="TestWebApi" asp-action="Index">WebApi</a></li>
 </ul>
