--- a/Ui/WebStore_Study/Views/Home/Index.cshtml
+++ b/Ui/WebStore_Study/Views/Home/Index.cshtml
@@ -1,19 +1,5 @@
 ﻿@using WebStore_Study.Interfaces.Services
-@inject IProductData productData
-@{
-    var products = productData
-        .GetProducts()
-        .OrderBy(p => p.Order)
-        .Take(6)
-        .Select(p => new ProductViewModel
-        {
-            Id = p.Id,
-            Name = p.Name,
-            ImageUrl = p.ImageUrl,
-            Order = p.Order,
-            Price = p.Price,
-        });
-}
+@model IEnumerable<ProductViewModel>
 
 <partial name="Partial/_Slider" />
 <section>
@@ -26,7 +12,7 @@
 
             <div class="col-sm-9 padding-right">
 
-                <partial name="../Shared/Partial/_FeaturesItems" model="products" />
+                <partial name="../Shared/Partial/_FeaturesItems" model="Model" />
 
                 <partial name="../Shared/Partial/_CategoryTab" />
 
