--- a/Ui/WebStore_Study/Areas/Admin/Views/Catalog/Create.cshtml
+++ b/Ui/WebStore_Study/Areas/Admin/Views/Catalog/Create.cshtml
@@ -22,7 +22,7 @@
             <form enctype="multipart/form-data" asp-action="EndCreate">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-             ц   <div class="form-group">
+                <div class="form-group">
                     <label class="control-label">Изображение</label>
                     <input asp-for="Image" type="file" class="form-control" />
                     <span asp-validation-for="Image" class="text-danger"></span>
