--- a/Ui/WebStore_Study/Views/Home/Index.cshtml
+++ b/Ui/WebStore_Study/Views/Home/Index.cshtml
@@ -1,5 +1,22 @@
 ﻿@using WebStore_Study.Interfaces.Services
-@model IEnumerable<ProductViewModel>
+@using WebStore_Study.Services.Mapping
+@inject IProductData ProductData
+@{
+    var products = ProductData
+        .GetProducts()
+        .OrderBy(p => p.Order)
+        .Take(6)
+        .ToList()
+        .FromDto()
+        .Select(p => new ProductViewModel
+        {
+            Id = p.Id,
+            Name = p.Name,
+            ImageUrl = p.ImageUrl,
+            Order = p.Order,
+            Price = p.Price,
+        });
+}
 
 <partial name="Partial/_Slider" />
 <section>
@@ -12,7 +29,7 @@
 
             <div class="col-sm-9 padding-right">
 
-                <partial name="../Shared/Partial/_FeaturesItems" model="Model" />
+                <partial name="../Shared/Partial/_FeaturesItems" model="products" />
 
                 <partial name="../Shared/Partial/_CategoryTab" />
 
