--- a/Ui/WebStore_Study/Views/Shared/Components/Brands/Default.cshtml
+++ b/Ui/WebStore_Study/Views/Shared/Components/Brands/Default.cshtml
@@ -5,7 +5,9 @@
             <ul class="nav nav-pills nav-stacked">
                 @foreach (var brand in Model.Where(b=>b.ProductsCount>0))
                 {
-                    <li><a asp-controller="Catalog" asp-action="Shop" asp-route-brandId="@brand.Id"> <span class="pull-right">(@brand.ProductsCount)</span>@brand.Name</a></li>
+                    <li @(brand.Id==ViewBag.BrandId? "class=active":null) ><a asp-controller="Catalog" asp-action="Shop" asp-route-brandId="@brand.Id">
+                        <span class="pull-right">(@brand.ProductsCount)</span>@brand.Name
+                    </a></li>
                 }
 
             </ul>
