--- a/Ui/WebStore_Study/Views/Catalog/Shop.cshtml
+++ b/Ui/WebStore_Study/Views/Catalog/Shop.cshtml
@@ -13,16 +13,17 @@
 
 <section>
     <div class="container">
+        <vc:bread-crumbs/>
         <div class="row">
             <div class="col-sm-3">
 
                 <partial name="../Shared/Partial/_LeftSideBar"/>
-                
+
             </div>
 
             <div class="col-sm-9 padding-right">
-                
-                <partial name="../Shared/Partial/_FeaturesItems" model="Model.Products" />
+
+                <partial name="../Shared/Partial/_FeaturesItems" model="Model.Products"/>
 
             </div>
         </div>
