Pagination for product catalog

--- a/Ui/WebStore_Study/Views/Home/Index.cshtml
+++ b/Ui/WebStore_Study/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 @inject IProductData ProductData
 @{
     var products = ProductData
-        .GetProducts()
+        .GetProducts().Products
         .OrderBy(p => p.Order)
         .Take(6)
         .ToList()
