--- a/Ui/WebStore_Study/Views/Catalog/Shop.cshtml
+++ b/Ui/WebStore_Study/Views/Catalog/Shop.cshtml
@@ -24,6 +24,16 @@
             <div class="col-sm-9 padding-right">
 
                 <partial name="../Shared/Partial/_FeaturesItems" model="Model.Products"/>
+                
+                <paging page-model="Model.PageViewModel"
+                        page-action="Shop"
+                        page-url-SectionId="@Model.SectionId"
+                        page-url-BrandId="@Model.BrandId"
+                        page-url-PageSize="@Context.Request.Query["PageSize"]">
+                </paging>
+               
+                
+                
 
             </div>
         </div>
