SignalR test finished

--- a/Ui/WebStore_Study/Views/Shared/Partial/_MainMenu.cshtml
+++ b/Ui/WebStore_Study/Views/Shared/Partial/_MainMenu.cshtml
@@ -24,6 +24,8 @@
         <ul role="menu" class="sub-menu">
             <li><a taghelper-is-active-route asp-controller="TestWebApi" asp-action="Index">WebApi</a></li>
             <li><a taghelper-is-active-route asp-controller="AjaxTest" asp-action="Index">Ajax test</a></li>
+            <li><a taghelper-is-active-route asp-controller="AjaxTest" asp-action="SignalRTest">SignalR</a></li>
+
         </ul>
     </li>
 </ul>
